--- a/index_test.html
+++ b/index_test.html
@@ -83,11 +83,11 @@ Articles related to my works:
 <!-- Publication --><br>
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
-		<ul><li><div>
-		<span class="cvitem"><div class="bouncing-text" style="float: left">
-  <div class="sign1" style="float: left">N</div>
-  <div class="sign2" style="display: inline-block;">E</div>
+		<ul><li><div style="display: flex;">
+		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
   <div class="shadow"></div></div><div class="paper_title" style="display: inline-block;">&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div>
 			</span>
 		<span class="cvperiod"></span></div>
