--- a/test2.html
+++ b/test2.html
@@ -37,14 +37,41 @@
 </head>
 
 
-<body>
+<body><li>dd
 <div class="bouncing-text">
   <div class="sign1">N</div>
   <div class="sign2">E</div>
   <div class="sign3">W</div>
    <div class="shadow"></div>
 <!-- <div class="shadow-two"></div>-->
-</div>
+</div></li>
+
+<br>
+		<span class="cvitem"><div style="paper_title">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"
+			<div class="bouncing-text">
+  <div class="sign1">New</div>
+  <div class="sign2">E</div>
+  <div class="sign3">W</div>
+  <div class="shadow"></div></div></span></span>
+		<span class="cvperiod"></span>
+		
+		<div id="footer">Questions? Contact us
+		  <span id="email" style="color:blue; text-algin:center;">abc@xyz.com</span>
+		  Thank you
+		</div>
+		<ul><li>
+		<table border="0"><td><div class="paper_title">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div></td><td><div class="bouncing-text">
+  <div class="sign1">N</div>
+  <div class="sign2">E</div>
+  <div class="sign3">W</div>
+  <div class="shadow"></div></div></td></table></li></ul>
+  
+  
+  <div class="paper_title" style="display: inline-block;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"&nbsp</div><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign1">N</div>
+  <div class="sign2">E</div>
+  <div class="sign3">W</div>
+  <div class="shadow"></div></div>
 </body>
 </html>
 
