--- a/arxiv/2023_02_arxiv.html
+++ b/arxiv/2023_02_arxiv.html
@@ -97,6 +97,42 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04660">https://arxiv.org/abs/2302.04660</a></span> Doniach phase diagram for Kondo lattice model on the square and triangular lattices</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04864">https://arxiv.org/abs/2302.04864</a></span> Dynamic mass generation on two-dimensional electronic hyperbolic lattices (Bitan Roy)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.04706">https://arxiv.org/abs/2302.04706</a></span> Non-Hermitian fermions with effective mass</p>
+<br>
+<p class="p1">20230213</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.05122">https://arxiv.org/abs/2302.05122</a></span> Anomalous Hall Effect from a Non-Hermitian Viewpoint ***** (Hiroki Isobe, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.05292">https://arxiv.org/abs/2302.05292</a></span> Real-Space Renormalization group for spin glasses</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.05279">https://arxiv.org/abs/2302.05279</a></span> Magnetic catalysis in the (2+1)-dimensional Gross-Neveu model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.05194">https://arxiv.org/abs/2302.05194</a></span> Non–Fermi liquid behavior of doped Kondo insulator: The unique properties of CeRhSb1−x Tex ***</p>
+<p class="p2"><br></p>
+<p class="p1">20230214</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.05710">https://arxiv.org/abs/2302.05710</a></span> Non-Abelian generalization of non-Hermitian quasicrystal: PT -symmetry breaking, localization, entanglement and topological transitions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06501">https://arxiv.org/abs/2302.06501</a></span> Continuous phase transitions between fractional quantum Hall states and symmetry-protected topological states *** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06596">https://arxiv.org/abs/2302.06596</a></span> Plaquette Singlet Transition, Magnetic Barocaloric Effect, and Spin Supersolidity in the Shastry-Sutherland Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06222">https://arxiv.org/abs/2302.06222</a></span> Electric control of two-dimensional Van Hove singularity in oxide ultra-thin films (TaeWon Noh, Changyoung Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13884">https://arxiv.org/abs/2107.13884</a></span> Fractons, symmetric gauge fields and geometry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2105.05272">https://arxiv.org/abs/2105.05272</a></span> Circular dichroism as a probe for topology in three-dimensional semimetals (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20230215</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06633">https://arxiv.org/abs/2302.06633</a></span> Fluctuation-dominated quantum oscillations in excitonic insulators (Nigel R. Cooper)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06828">https://arxiv.org/abs/2302.06828</a></span> Fermi liquids beyond the forward scattering limit: the role of non-forward scatterings for scale invariance and instabilities ***** (Han Ma, Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06765">https://arxiv.org/abs/2302.06765</a></span> Singlet, Triplet and Pair Density Wave Superconductivity in the Doped Triangular-Lattice Moir ́e System **** (D. N. Sheng)</p>
+<p class="p2"><br></p>
+<p class="p1">20230216</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07451">https://arxiv.org/abs/2302.07451</a></span> Crystal-symmetry-protected gapless vortex-line phases in superconducting Dirac semimetals (Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06632">https://arxiv.org/abs/2302.06632</a></span> Finite-size and finite bond dimension effects of tensor network renormalization (Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07539">https://arxiv.org/abs/2302.07539</a></span> Impurity-Driven Metal-Insulator Transitions in Holography (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.06890">https://arxiv.org/abs/2109.06890</a></span> Dynamical Axions in U(1) Quantum Spin Liquids ***** (Claudio Castelnovo)</p>
+<p class="p2"><br></p>
+<p class="p1">20230217</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07883">https://arxiv.org/abs/2302.07883</a></span> Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid ****** (<b>SangEun Han</b>, Daniel J. Schultz, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.07661">https://arxiv.org/abs/2207.07661</a></span> Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials<span class="Apple-converted-space">  </span>****** (<b>SangEun Han</b>, Daniel J. Schultz, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07879">https://arxiv.org/abs/2302.07879</a></span> Discrete scale invariant fixed point in a quasiperiodic classical dimer model (S. A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.08499">https://arxiv.org/abs/2302.08499</a></span> Non-Fermi liquids from kinetic constraints in tilted optical lattices ***** (Ethan Lake, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.08238">https://arxiv.org/abs/2302.08238</a></span> Scaling behaviors at quantum and classical first-order transitions **** (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.08009">https://arxiv.org/abs/2302.08009</a></span> Scrambling and Recovery of Quantum Information in Inhomogeneous Quenches in Two-dimensional Conformal Field ***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07905">https://arxiv.org/abs/2302.07905</a></span> Isometric tensor network representations of two-dimensional thermal states (Frank Pollmann, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07885">https://arxiv.org/abs/2302.07885</a></span> A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice ***** (Mathias Scheurer, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10775">https://arxiv.org/abs/2301.10775</a></span> Collisionless dynamics of general non-Fermi liquids from hydrodynamics of emergent conserved quantities (Dominic V. Else)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
