--- a/index_test.html
+++ b/index_test.html
@@ -61,9 +61,10 @@
 
 	Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
 
-My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
-	I am SangEun Han who is a postdoctoral fellow in Yong Baek Kim's group in University of Toronto. My research theme is to understand strongly correlated systems, in particular, by using quantum field theory. I have interests in the non-Fermi liquid, quantum phase transition and quantum criticality.<br><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
+My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	<br>
+	ㅡㅛ am SangEun Han and a postdoctoral fellow in Yong Baek Kim's Quantum Condensed Matter Theory group in University of Toronto. My research theme is  understanding strongly correlated systems, in particular, by using quantum field theory.<br><br>-->
+	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">News</a> </div>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230216_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/02/16)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -92,10 +93,10 @@ Articles related to my works:
 			</span>
 		<span class="cvperiod"></span></div>
 		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2302.XXXXX">arXiv:2302.XXXXX</a>
+			<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a>
 			<!-- <div style="overflow: auto"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><p style="margin:3px;"></p><span class="explain_paper"><img style="float:right" src="img/ce2kd.png" alt="Phase diagram of chiral symmetry breaking transitions with schematic RG flows." width=40%> We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<br></span></details><p style="margin:3px;"></p> -->
 		</li><li><div>
-		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments" </span>
+		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
@@ -356,7 +357,11 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</li></ul>
 	<div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
-		<span class="cvitem"> APS March Meeting 2023 (Talk) </span>
+		<span class="cvitem">&nbsp<div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div> APS March Meeting 2023 (Talk) </span>
 		<span class="cvperiod">March 2023</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4">"Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments"</a> </div>	
