--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 <div id="center">
 <div id="floating_menu">
 	  <ul style="display: flex; justify-content: space-between;padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto;overflow: hidde;">
-	    <li><a href="#top">Top</a></li>
+	    <li><a href="#top" style="text-decoration:none;color:var(--font-color)">Top</a></li>
 	    <!--<li><a href="#me">About me</a></li>-->
-	    <li><a href="#Full_CV">CV (PDF)</a></li>
-	    <li><a href="#publication">Publication</a></li>
-	    <li><a href="#today_arxiv">Today's arXiv</a></li>
-	    <li><a href="#title">Contact</a></li>
+	    <li><a href="#Full_CV" style="text-decoration:none;color:var(--font-color)">CV (PDF)</a></li>
+	    <li><a href="#publication" style="text-decoration:none;color:var(--font-color)">Publication</a></li>
+	    <li><a href="#today_arxiv" style="text-decoration:none;color:var(--font-color)">Today's arXiv</a></li>
+	    <li><a href="#title" style="text-decoration:none;color:var(--font-color)">Contact</a></li>
 	  </ul>
 	</div>
-	<div style="height:25px"></div>
+	<div style="height:35px"></div>
 <div id="title">SangEun Han</div>
 <iframe src="titlecontent.html" style="width:100%; height:63; border:none"></iframe>
 <!---<div id="titlecontent">
@@ -61,9 +61,14 @@
 
 	Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
 
-My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
-	
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230119_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/01/19)</a>
+My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	<br>
+	ㅡㅛ am SangEun Han and a postdoctoral fellow in Yong Baek Kim's Quantum Condensed Matter Theory group in University of Toronto. My research theme is  understanding strongly correlated systems, in particular, by using quantum field theory.<br><br>-->
+	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
+	<ul><li><b>&ltMar. 2023&gt</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4" style="font-style: italic;">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" (2023/03/08 08:36 am)</a> at APS march meeting 2023, Las Vegas, Nevada, USA!
+	</li><li>
+		<b>&ltFeb. 2023&gt</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
+	</li></ul>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230216_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/02/16)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -83,8 +88,19 @@ Articles related to my works:
 <!-- Publication --><br>
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
-		<ul><li><div>
-		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments" </span>
+		<ul><li><div style="display: flex;">
+		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div><div class="paper_title" style="display: inline-block;">&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div>
+			</span>
+		<span class="cvperiod"></span></div>
+		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a>
+			<!-- <div style="overflow: auto"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><p style="margin:3px;"></p><span class="explain_paper"><img style="float:right" src="img/ce2kd.png" alt="Phase diagram of chiral symmetry breaking transitions with schematic RG flows." width=40%> We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<br></span></details><p style="margin:3px;"></p> -->
+		</li><li><div>
+		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
@@ -335,7 +351,7 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 
 		</li></ul></ul>
 	</div>
-	<div class="cvitemize"> Invited Talks </div>
+	<div class="cvitemize"> <a id="invited" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Invited Talks</a> </div>
 	<ul><li><div>
 	<span class="cvitem"> KAIST-Weizmann Workshop on Quantum Condensed Matter Physics </span>
 	<span class="cvperiod">December 2019</span>
@@ -343,9 +359,13 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	<div class="cvitemcontent"> "Emergence of Supersymmetry from spin-lattice coupling" </div>	
 
 	</li></ul>
-	<div class="cvitemize"> Contributed Talks and Posters </div>
-		<ul><li><div>
-		<span class="cvitem"> APS March Meeting 2023 (Talk) </span>
+	<div class="cvitemize"> <a id="contributed" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Contributed Talks and Posters</a> </div>
+		<ul><li><div><div style="display: flex;">
+		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div> APS March Meeting 2023 (Talk) </span></div>
 		<span class="cvperiod">March 2023</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4">"Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments"</a> </div>	
