--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@ Articles related to my works:
 <!-- Publication --><br>
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
-		<ul><li><div style="display: flex;">
+		<ul><li><div class="paper_title" style="display: flex;">
 		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div><div class="paper_title" style="display: inline-block;">&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</div>
+  <div class="shadow"></div></div>&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"
 			</span>
 		<span class="cvperiod"></span></div>
 		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
