--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
-<a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ">Publications on Google Scholar</a><br>
-<a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1">Publications on arXiv</a><br>
-<a href="https://inspirehep.net/authors/1939891">Publications on INSPIRE</a><br>
-<a href="https://orcid.org/0000-0003-3141-1964">Publications on <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.1em;" alt="ORCID iD icon">ORCID</a>
+<a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ">Publications on <img src="img/Google_Scholar_logo.svg" height="17px" style="vertical-align: bottom;" alt="Google Scholar"><img src="img/Google_Scholar_ID.svg" height="17px" style="vertical-align: bottom;" alt="Google Scholar"></a><br>
+<a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1">Publications on <img src="img/arXiv_logo.svg" height="17px" style="vertical-align: bottom;" alt="arXiv"></a><br>
+<a href="https://inspirehep.net/authors/1939891">Publications on <img src="img/INSPIRE_logo.svg" height="17px" style="vertical-align: bottom;" alt="INSPIRE"></a><br>
+<a href="https://orcid.org/0000-0003-3141-1964">Publications on <img src="img/ORCID_ID.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"><img src="img/ORCID_logo.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"></a>
 <br><br>
 Articles related to my works:
 <br>
