--- a/arxiv/2023_02_arxiv.html
+++ b/arxiv/2023_02_arxiv.html
@@ -133,6 +133,42 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07905">https://arxiv.org/abs/2302.07905</a></span> Isometric tensor network representations of two-dimensional thermal states (Frank Pollmann, Michael Knap)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07885">https://arxiv.org/abs/2302.07885</a></span> A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice ***** (Mathias Scheurer, Subir Sachdev)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10775">https://arxiv.org/abs/2301.10775</a></span> Collisionless dynamics of general non-Fermi liquids from hydrodynamics of emergent conserved quantities (Dominic V. Else)</p>
+<br>
+<p class="p1">20230220</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.08876">https://arxiv.org/abs/2302.08876</a></span> Tunable Lyapunov exponent in a Sachdev-Ye-Kitaev-type model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07885">https://arxiv.org/abs/2302.07885</a></span> A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice ***** (Mathias Scheurer, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15118">https://arxiv.org/abs/2206.15118</a></span> Anomalies and Symmetry Fractionalization (Po-Shen Hsin)</p>
+<p class="p2"><br></p>
+<p class="p1">20230221</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.09094">https://arxiv.org/abs/2302.09094</a></span> Measurement-induced entanglement transitions in quantum circuits of non-interacting fermions: Born-rule versus forced measurements **** (Chao-Ming Jian, Andreas W. W. Ludwig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.10169">https://arxiv.org/abs/2302.10169</a></span> Emergent QED3 from half-filled flat Chern bands ***** (Xue-Yang Song, Hart Goldman, Liang Fu)<br>
+<a href="https://arxiv.org/abs/2302.10115"><span class="s1">https://arxiv.org/abs/2302.10115</span></a> Non-Hermitian strongly interacting Dirac fermions: a quantum Monte-Carlo study</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.10078">https://arxiv.org/abs/2302.10078</a></span> Transmission and conductance across junctions of isotropic and anisotropic three-dimensional semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.09702">https://arxiv.org/abs/2302.09702</a></span> Triplet pairing, orbital selectivity and correlations in iron-based superconductors (Yashar Komijani, Elio K ̈onig, Piers Coleman)<br>
+<a href="https://arxiv.org/abs/2302.09701"><span class="s1">https://arxiv.org/abs/2302.09701</span></a> Matrix Product Study of Spin Fractionalization in the 1D Kondo Insulator (Yashar Komijani, Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.10178">https://arxiv.org/abs/2302.10178</a></span> Origin of π-shifted three-dimensional charge density waves in kagome metal AV3Sb5 (Heqiu Li, Yong Baek Kim, Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.09914">https://arxiv.org/abs/2302.09914</a></span> Exact Renormalization Group in Large N</p>
+<p class="p2"><br></p>
+<p class="p1">20230222</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.10563">https://arxiv.org/abs/2302.10563</a></span> Diagrammatic method for many-body non-Markovian dynamics: memory effects and entanglement transitions ***</p>
+<p class="p2"><br></p>
+<p class="p1">20230223</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.10968">https://arxiv.org/abs/2302.10968</a></span> Two-dimensional inversion symmetry as the fundamental symmetry of incompressible quantum Hall fluids (F. D. M. Haldane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11262">https://arxiv.org/abs/2302.11262</a></span> Unavoidable Fermi liquid instabilities in sign problem-free models *** (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08711">https://arxiv.org/abs/2212.08711</a></span> Drude weights in one-dimensional systems with a single defect (Kazuaki Takasan, Masaki Oshikawa, Haruki Watanabe)</p>
+<p class="p2"><br></p>
+<p class="p1">20230224</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.12250">https://arxiv.org/abs/2302.12250</a></span> Phase diagram of training dynamics in deep neural networks: effect of learning rate, depth, and width (Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11742">https://arxiv.org/abs/2302.11742</a></span> The teaching from entanglement: 2D deconfined quantum critical points are not conformal ***** (Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11585">https://arxiv.org/abs/2302.11585</a></span> Non-Abelian currents bootstrap (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11582">https://arxiv.org/abs/2302.11582</a></span> Cavity Moire ́ Materials: Controlling Magnetic Frustration with Quantum Light-Matter Interaction (Yuto Ashida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11633">https://arxiv.org/abs/2302.11633</a></span> Superconducting valence bond fluid in lightly doped 8-leg t-J cylinders (Steven A. Kivelson, Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.09272">https://arxiv.org/abs/2102.09272</a></span> Infinite critical boson non-Fermi liquid **** (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.11882">https://arxiv.org/abs/2302.11882</a></span> SYK Model with global symmetries in the double scaling limit</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.12117">https://arxiv.org/abs/2302.12117</a></span> On string one-loop correction to the Einstein-Hilbert term and its implications on the K ̈ahler potential. (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1902.06928">https://arxiv.org/abs/1902.06928</a></span> CFTs on curved spaces (Ken KIKUCHI)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06622">https://arxiv.org/abs/2302.06622</a></span> Emergent N = 4 supersymmetry from N = 1 (Monica Jinwoo Kang, Ki-Hong Lee, Jaewon Song)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.14011">https://arxiv.org/abs/2212.14011</a></span> Massless graviton in a model of quantum gravity with emergent spacetime (Sung-Sik Lee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
