--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	ㅡㅛ am SangEun Han and a postdoctoral fellow in Yong Baek Kim's Quantum Condensed Matter Theory group in University of Toronto. My research theme is  understanding strongly correlated systems, in particular, by using quantum field theory.<br><br>-->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-		<li><b>[Mar. 2023]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4" style="font-style: italic;">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" (2023/03/08 08:36 am)</a> at APS march meeting 2023, Las Vegas, Nevada, USA!
+		<li><b>[Mar. 2023]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4" style="font-style: italic;">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" (2023/03/08 08:36 am)</a> at APS march meeting 2023, Las Vegas, Nevada, USA!<br>
+			<img src="img/march2023_ads.svg" width="100%>
 	</li><li>
 		<b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
